--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
   
 jobs:
-  Run test:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
